--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "oracledb": "^2.2.0"
   },
   "devDependencies": {
     "cross-env": "^5.1.5"
